implementação de três diferentes requisições server-side no controle HelloController

--- a/app/src/main/resources/templates/hello.html
+++ b/app/src/main/resources/templates/hello.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello My little Friend!</h1>
+  <h1>Hello <span th:text="${nome}"></span></h1>
 </body>
 </html>
